--- a/AdonisJS/Atividade-03/package.json
+++ b/AdonisJS/Atividade-03/package.json
@@ -20,12 +20,15 @@
   },
   "dependencies": {
     "@adonisjs/core": "^5.1.10",
+    "@adonisjs/lucid": "^15.0.3",
     "@adonisjs/repl": "^3.1.5",
     "@adonisjs/session": "^6.1.1",
     "@adonisjs/shield": "^7.0.5",
     "@adonisjs/view": "^6.0.7",
+    "luxon": "^2.0.1",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
-    "source-map-support": "^0.5.19"
+    "source-map-support": "^0.5.19",
+    "sqlite3": "^5.0.2"
   }
 }
