--- a/AdonisJS/Atividade-05/package.json
+++ b/AdonisJS/Atividade-05/package.json
@@ -26,6 +26,7 @@
     "@adonisjs/shield": "^7.0.5",
     "@adonisjs/view": "^6.0.7",
     "luxon": "^2.0.1",
+    "phc-argon2": "^1.1.2",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.19",
