--- a/AdonisJS/Atividade-05/package.json
+++ b/AdonisJS/Atividade-05/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@adonisjs/auth": "^8.0.7",
+    "@adonisjs/bouncer": "^2.2.4",
     "@adonisjs/core": "^5.1.10",
     "@adonisjs/lucid": "^15.0.3",
     "@adonisjs/repl": "^3.1.5",
